<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.circularreveal.CircularRevealRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBg"
    tools:context=".ui.activity.common.PermissionActivity">

    <com.google.android.material.circularreveal.CircularRevealLinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="?attr/actionBarSize"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/permission_required"
            android:textSize="@dimen/_15sdp"
            android:textColor="@color/black"
            android:fontFamily="@font/inter_bold"/>

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:text="@string/txt_permission"
            android:gravity="center"
            android:layout_marginTop="@dimen/_5sdp"
            android:textSize="@dimen/_12sdp"
            android:textColor="@color/colorTextPrimary"/>

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:text="@string/permissions"
            android:layout_marginStart="@dimen/_15sdp"
            android:textSize="@dimen/_14sdp"
            android:textColor="@color/black"
            android:fontFamily="@font/inter_semibold"/>

        <com.google.android.material.circularreveal.CircularRevealLinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_15sdp"
            android:layout_marginVertical="@dimen/_5sdp"
            android:padding="@dimen/_5sdp"
            android:orientation="horizontal">
            <com.google.android.material.imageview.ShapeableImageView
                android:layout_width="@dimen/_40sdp"
                android:layout_height="@dimen/_40sdp"
                android:background="@drawable/bg_round_gradient"
                android:src="@drawable/ic_storage"
                app:contentPadding="@dimen/_10sdp"/>
            <com.google.android.material.circularreveal.CircularRevealLinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:orientation="vertical">
                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/storage"
                    android:textSize="@dimen/_13sdp"
                    android:textColor="@color/black"
                    android:fontFamily="@font/inter_semibold"/>
                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_permission_storage"
                    android:textSize="@dimen/_11sdp"
                    android:textColor="@color/colorTextPrimary"/>
            </com.google.android.material.circularreveal.CircularRevealLinearLayout>
        </com.google.android.material.circularreveal.CircularRevealLinearLayout>

        <com.google.android.material.circularreveal.CircularRevealLinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_15sdp"
            android:layout_marginVertical="@dimen/_5sdp"
            android:padding="@dimen/_5sdp"
            android:orientation="horizontal">
            <com.google.android.material.imageview.ShapeableImageView
                android:layout_width="@dimen/_40sdp"
                android:layout_height="@dimen/_40sdp"
                android:background="@drawable/bg_round_gradient"
                app:contentPadding="@dimen/_10sdp"
                android:src="@drawable/ic_notification"/>
            <com.google.android.material.circularreveal.CircularRevealLinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:orientation="vertical">
                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/notification"
                    android:textSize="@dimen/_13sdp"
                    android:textColor="@color/black"
                    android:fontFamily="@font/inter_semibold"/>
                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_permission_permission"
                    android:textSize="@dimen/_11sdp"
                    android:textColor="@color/colorTextPrimary"/>
            </com.google.android.material.circularreveal.CircularRevealLinearLayout>
        </com.google.android.material.circularreveal.CircularRevealLinearLayout>
    </com.google.android.material.circularreveal.CircularRevealLinearLayout>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/btnAllow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/_70sdp"
        android:layout_marginHorizontal="@dimen/_50sdp"
        android:background="@drawable/bg_accent_15"
        android:padding="@dimen/_10sdp"
        android:text="@string/allow_permission"
        android:textColor="@color/white"
        android:textSize="@dimen/_13sdp"
        android:gravity="center"/>

</com.google.android.material.circularreveal.CircularRevealRelativeLayout>