<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.circularreveal.CircularRevealRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBg"
    tools:context=".ui.activity.common.SelectionActivity1">

    <com.google.android.material.circularreveal.CircularRevealRelativeLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_marginHorizontal="@dimen/_10sdp">
        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/next"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_next_with_bg"/>
    </com.google.android.material.circularreveal.CircularRevealRelativeLayout>

    <com.google.android.material.circularreveal.CircularRevealLinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:layout_below="@id/toolbar">
        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/txt_selection_title_1"
            android:gravity="center"
            android:textSize="@dimen/_13sdp"
            android:textColor="@color/black"
            android:fontFamily="@font/inter_medium"/>

        <com.google.android.material.circularreveal.CircularRevealLinearLayout
            android:id="@+id/layout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_10sdp"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:layout_marginBottom="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/bg_selection"
            android:orientation="horizontal">
            <com.google.android.material.circularreveal.CircularRevealLinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_5sdp"
                android:layout_gravity="center_vertical"
                android:orientation="vertical"
                android:layout_weight="0.2">
                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/video_downloading"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_13sdp"
                    android:fontFamily="@font/inter_semibold"/>
                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_video_download"
                    android:textColor="@color/colorTextPrimary"/>
            </com.google.android.material.circularreveal.CircularRevealLinearLayout>
            <View
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"/>
            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/selection_1"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:layout_gravity="end|center_vertical"
                android:src="@drawable/rb_selection"/>
        </com.google.android.material.circularreveal.CircularRevealLinearLayout>

        <com.google.android.material.circularreveal.CircularRevealLinearLayout
            android:id="@+id/layout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_10sdp"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:layout_marginVertical="@dimen/_5sdp"
            android:background="@drawable/bg_selection"
            android:orientation="horizontal">
            <com.google.android.material.circularreveal.CircularRevealLinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_5sdp"
                android:layout_gravity="center_vertical"
                android:orientation="vertical"
                android:layout_weight="0.2">
                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/save_image_video"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_13sdp"
                    android:fontFamily="@font/inter_semibold"/>
                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_save_image"
                    android:textColor="@color/colorTextPrimary"/>
            </com.google.android.material.circularreveal.CircularRevealLinearLayout>
            <View
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"/>
            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/selection_2"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:layout_gravity="end|center_vertical"
                android:src="@drawable/rb_selection"/>
        </com.google.android.material.circularreveal.CircularRevealLinearLayout>

        <com.google.android.material.circularreveal.CircularRevealLinearLayout
            android:id="@+id/layout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_10sdp"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:layout_marginBottom="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/bg_selection"
            android:orientation="horizontal">
            <com.google.android.material.circularreveal.CircularRevealLinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_5sdp"
                android:layout_gravity="center_vertical"
                android:orientation="vertical"
                android:layout_weight="0.2">
                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/download_hd"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_13sdp"
                    android:fontFamily="@font/inter_semibold"/>
                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_download_hd"
                    android:textColor="@color/colorTextPrimary"/>
            </com.google.android.material.circularreveal.CircularRevealLinearLayout>
            <View
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"/>
            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/selection_3"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:layout_gravity="end|center_vertical"
                android:src="@drawable/rb_selection"/>
        </com.google.android.material.circularreveal.CircularRevealLinearLayout>
    </com.google.android.material.circularreveal.CircularRevealLinearLayout>
</com.google.android.material.circularreveal.CircularRevealRelativeLayout>