<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.circularreveal.CircularRevealRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.activity.WhatsappActivity">

    <com.google.android.material.circularreveal.CircularRevealRelativeLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/btnBack"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/_5sdp"
            android:src="@drawable/ic_back"
            app:contentPadding="@dimen/_5sdp" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_toEndOf="@id/btnBack"
            android:fontFamily="@font/inter_bold"
            android:text="@string/status_saver"
            android:textColor="@color/black"
            android:textSize="@dimen/_14sdp"/>
    </com.google.android.material.circularreveal.CircularRevealRelativeLayout>

    <com.google.android.material.circularreveal.CircularRevealLinearLayout
        android:id="@+id/layoutTop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:orientation="horizontal"
        android:layout_below="@id/toolbar">
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/images"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_10sdp"
            android:text="@string/images"
            android:gravity="center"
            android:textSize="@dimen/_13sdp"
            android:textColor="@color/black"
            android:fontFamily="@font/inter_semibold"
            android:background="@drawable/bg_accent_border_5"
            android:layout_weight="1"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/video"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_10sdp"
            android:text="@string/videos"
            android:gravity="center"
            android:textSize="@dimen/_13sdp"
            android:textColor="@color/black"
            android:fontFamily="@font/inter_semibold"
            android:layout_weight="1"/>
    </com.google.android.material.circularreveal.CircularRevealLinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layoutTop"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_5sdp"/>

</com.google.android.material.circularreveal.CircularRevealRelativeLayout>